--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
   <title>David Cejas Bio</title>
   <meta name="viewport" content="width=device-width, initial-scale=1">
-  <link rel="stylesheet" href="master.css">
+  <link rel="stylesheet" href="assets/css/style.css">
 </head>
 
 <body>
@@ -23,7 +23,7 @@
 
       <h2>David Cejas</h2>
 
-      <img id="bioImage" src="profile.jpg" style="width:250px; height:250px" alt="David Cejas">
+      <img id="bioImage" src="assets/images/profile.jpg" style="width:250px; height:250px" alt="David Cejas">
       
       <p>Write a short paragraph or two about yourself, or use placeholder text from <a 
         href="http://www.lipsum.com/">www.lipsum.com</a></p>
@@ -34,7 +34,7 @@
       <h2>Contact Info</h2>
 
       <ul>
-          <li><strong>Email:</strong> <a href="#">dCejas430@gmail.com</a></li>
+          <li><strong>Email:</strong> <a href="#">email@gmail.com</a></li>
           <li><strong>Github:</strong> <a href="#">sampleName</a></li>
           <li><strong>Portfolio:</strong> <a href="#">coming soon</a></li>
       </ul>
