HTML revised to match this assignment, CSS zeroed out

--- a/index.html
+++ b/index.html
@@ -14,32 +14,42 @@
 <body>
 
   <header>
-    <h1>Student Bio</h1>
+    <h1>David Cejas</h1>
+
+    <nav>
+      <p>About</p>
+      <p>Portfolio</p>
+      <p>Contact</p>
+    </nav>
+
   </header>
 
   <div class="container">
 
     <section id="main-bio">
 
-      <h2>David Cejas</h2>
+      <h2>About Me</h2>
 
-      <img id="bioImage" src="assets/images/profile.jpg" style="width:250px; height:250px" alt="David Cejas">
+      <img id="bioImage" src="assets/images/profile.jpg" style="width:250px; height:250px" alt="David Cejas Pic">
       
-      <p>Write a short paragraph or two about yourself, or use placeholder text from <a 
-        href="http://www.lipsum.com/">www.lipsum.com</a></p>
+      <p>Write a paragraph or two about yourself. Make it fun, show your personality!</p>
     </section>
 
     <section id="contact-info">
 
-      <h2>Contact Info</h2>
-
-      <ul>
-          <li><strong>Email:</strong> <a href="#">email@gmail.com</a></li>
-          <li><strong>Github:</strong> <a href="#">sampleName</a></li>
-          <li><strong>Portfolio:</strong> <a href="#">coming soon</a></li>
+      <h2>Contact with Me</h2>
+<!--style="list-style-type:none" -->
+      <ul id="contactMe">
+        <li><img id="linkedin" src="assets/images/linkedin_icon.png" style="width:50px; height:50px;" alt="LinkedInIcon" a href="www.linkedin.com/in/david-cejas-61a65924"></a></li>
+        <li><img id="GitHub" src="assets/images/github_icon.png" style="width:50px; height:50px;" alt="GitHubIcon" a href="https://github.com/dcejas"></a></li>
+        <li><img id="Stack" src="assets/images/stack_icon.png" style="width:50px; height:50px;" alt="StackIcon" a href="https://stackoverflow.com/users/9238343/david-cejas?tab=profile"></a></li>
       </ul>
     </section>
   </div>
+
+  <footer>
+    <p>© Copyright 2018 David Cejas</p>
+  </footer>
 
 </body>
 
