--- a/index.html
+++ b/index.html
@@ -1,12 +1,10 @@
-<!-- Activity 1: Basic HTML Bio -->
-
 <!DOCTYPE html>
 <html lang="en-us">
 
 <head>
   <meta charset="utf-8" />
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
-  <title>David Cejas Bio</title>
+  <title>Week 1 HW_Recommended Assignment_MainIndex</title>
   <meta name="viewport" content="width=device-width, initial-scale=1">
   <link rel="stylesheet" href="assets/css/style.css">
 </head>
