--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
 <head>
   <meta charset="utf-8" />
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
-  <title>Week 1 HW_Recommended Assignment_MainIndex</title>
+  <title>HW1_MainIndex_Recommended</title>
   <meta name="viewport" content="width=device-width, initial-scale=1">
   <link rel="stylesheet" href="assets/css/style.css">
 </head>
@@ -33,11 +33,10 @@
       <p>Write a paragraph or two about yourself. Make it fun, show your personality!</p>
     </section>
 
-    <section id="contact-info">
-
-      <h2>Contact with Me</h2>
-<!--style="list-style-type:none" -->
-      <ul id="contactMe">
+    <section id="ConnectWithMe">
+      <h2>Connect with Me</h2>
+      <!--style="list-style-type:none" -->
+      <ul id="SocialIcons">
         <li><img id="linkedin" src="assets/images/linkedin_icon.png" style="width:50px; height:50px;" alt="LinkedInIcon" a href="www.linkedin.com/in/david-cejas-61a65924"></a></li>
         <li><img id="GitHub" src="assets/images/github_icon.png" style="width:50px; height:50px;" alt="GitHubIcon" a href="https://github.com/dcejas"></a></li>
         <li><img id="Stack" src="assets/images/stack_icon.png" style="width:50px; height:50px;" alt="StackIcon" a href="https://stackoverflow.com/users/9238343/david-cejas?tab=profile"></a></li>
