--- a/contact.html
+++ b/contact.html
@@ -1,56 +1,66 @@
-<!DOCTYPE html>
+<!doctype html>
 <html lang="en-us">
 
 <head>
-    <meta charset="utf-8" />
-    <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <title>HW1_ContactPage_Recommended</title>
-    <meta name="viewport" content="width=device-width, initial-scale=1">
-    <link rel="stylesheet" href="assets/css/style.css">
+  <meta charset="UTF-8">
+  <title>Contact | Your Name</title>
+  <link rel="stylesheet" type="text/css" href="assets/css/reset.css">
+  <link rel="stylesheet" type="text/css" href="assets/css/style.css">
 </head>
+
 <body>
-    <header>
-        <h1>David Cejas</h1>
-    
-        <nav>
-            <p>About</p>
-            <p>Portfolio</p>
-            <p>Contact</p>
-        </nav>
-    
-    </header>
 
+  <header id="masthead">
     <div class="container">
-
-        <section id="inputBox">
-            <h1>Contact</h1>
-            <hr>
-            <form action="index.html">
-                <form>
-                    Name<br>
-                        <input type="text" name="name" placeholder="John Smith"><br><br>
-                    Email<br>
-                        <input type="text" name="email" placeholder="example@gmail.com"><br><br>
-                    Message<br>
-                        <input type="text" name="subject" style="height:200px;width:100%;"><br><br>
-                    <input type="submit" value="Submit" style="heigt:100px; width:200px;">
-                </form>
-            </form>
-        </section>
-
-        <section id="ConnectWithMe">
-            <h2>Connect with Me</h2>
-            <!--style="list-style-type:none" -->
-            <ul id="SocialIcons">
-                <li><img id="linkedin" src="assets/images/linkedin_icon.png" style="width:50px; height:50px;" alt="LinkedInIcon" a href="www.linkedin.com/in/david-cejas-61a65924"></a></li>
-                <li><img id="GitHub" src="assets/images/github_icon.png" style="width:50px; height:50px;" alt="GitHubIcon" a href="https://github.com/dcejas"></a></li>
-                <li><img id="Stack" src="assets/images/stack_icon.png" style="width:50px; height:50px;" alt="StackIcon" a href="https://stackoverflow.com/users/9238343/david-cejas?tab=profile"></a></li>
-            </ul>
-        </section>
+      <a href="index.html" id="logo">Your Name</a>
+      <nav>
+        <a href="index.html">About</a>
+        <a href="portfolio.html">Portfolio</a>
+        <a href="contact.html">Contact</a>
+      </nav>
     </div>
+  </header>
 
-    <footer>
-        <p>© Copyright 2018 David Cejas</p>
-    </footer>
+  <div id="main-container" class="container">
+    <section class="main-section">
+      <h1>Contact</h1>
+
+      <form id="contact-form">
+        <ul>
+          <li>
+            <label for="name">Name</label>
+            <input type="text" id="name" name="name" placeholder="John Smith" required="required">
+          </li>
+          <li>
+            <label for="email">Email</label>
+            <input type="email" id="email" name="email" placeholder="example@gmail.com" required="required">
+          </li>
+          <li>
+            <label for="message">Message</label>
+            <textarea id="message" name="message" required="required"></textarea>
+          </li>
+        </ul>
+        <input type="submit">
+      </form>
+
+    </section>
+
+    <section class="sidebar">
+      <div id="connect">
+        <h2>Connect with Me</h2>
+
+        <a href="#"><img src="assets/images/github-128.png" class="social" alt="GitHub" /></a>
+        <a href="#"><img src="assets/images/linkedin-128.png" class="social" alt="LinkedIn" /></a>
+        <a href="#"><img src="assets/images/stackoverflow-128.png" class="social" alt="Stack Overflow" /></a>
+      </div>
+    </section>
+  </div>
+
+  <footer>
+    <div class="container">
+      Copyright &copy; 
+    </div>
+  </footer>
 </body>
+
 </html>
