--- a/portfolio.html
+++ b/portfolio.html
@@ -1,45 +1,74 @@
-<!DOCTYPE html>
+<!doctype html>
 <html lang="en-us">
 
 <head>
-  <meta charset="utf-8" />
-  <meta http-equiv="X-UA-Compatible" content="IE=edge">
-  <title>HW1_MainIndex_Recommended</title>
-  <meta name="viewport" content="width=device-width, initial-scale=1">
-  <link rel="stylesheet" href="assets/css/style.css">
+  <meta charset="UTF-8">
+  <title>Portfolio | Your Name</title>
+  <link rel="stylesheet" type="text/css" href="assets/css/reset.css">
+  <link rel="stylesheet" type="text/css" href="assets/css/style.css">
 </head>
 
 <body>
-    <header>
-        <h1>David Cejas</h1>
-        <nav>
-            <p>About</p>
-            <p>Portfolio</p>
-            <p>Contact</p>
-        </nav>
-    </header>
 
+  <header id="masthead">
     <div class="container">
-        <section id="portfolio_samples">
-            <h1>Portfolio</h1>
-            <!--Samples (images) go here-->
-        </section>
-
-        <section id="ConnectWithMe">
-            <h2>Connect with Me</h2>
-            <!--style="list-style-type:none" -->
-            <ul id="SocialIcons">
-                <li><img id="linkedin" src="assets/images/linkedin_icon.png" style="width:50px; height:50px;" alt="LinkedInIcon" a href="www.linkedin.com/in/david-cejas-61a65924"></a></li>
-                <li><img id="GitHub" src="assets/images/github_icon.png" style="width:50px; height:50px;" alt="GitHubIcon" a href="https://github.com/dcejas"></a></li>
-                <li><img id="Stack" src="assets/images/stack_icon.png" style="width:50px; height:50px;" alt="StackIcon" a href="https://stackoverflow.com/users/9238343/david-cejas?tab=profile"></a></li>
-            </ul>
-        </section>
+      <a href="index.html" id="logo">Your Name</a>
+      <nav>
+        <a href="index.html">About</a>
+        <a href="portfolio.html">Portfolio</a>
+        <a href="contact.html">Contact</a>
+      </nav>
     </div>
+  </header>
 
-    <footer>
-        <p>© Copyright 2018 David Cejas</p>
-    </footer>
-    
+  <div id="main-container" class="container">
+    <section class="main-section">
+      <h1>Portfolio</h1>
+
+      <div class="work">
+        <img src="assets/images/technics-q-c-640-480-1.jpg" alt="hangman">
+
+        <h3>Hangman</h3>
+      </div>
+      <div class="work">
+        <img src="assets/images/technics-q-c-640-480-2.jpg" alt="RPG Game">
+
+        <h3>RPG Game</h3>
+      </div>
+      <div class="work">
+        <img src="assets/images/technics-q-c-640-480-5.jpg" alt="Trivia Game">
+
+        <h3>Trivia Game</h3>
+      </div>
+      <div class="work">
+        <img src="assets/images/technics-q-c-640-480-7.jpg" alt="Rutgers Info Widget">
+
+        <h3>Rutgers Info Widget</h3>
+      </div>
+      <div class="work">
+        <img src="assets/images/technics-q-c-640-480-9.jpg" alt="Rock Paper Scissors">
+
+        <h3>Rock Paper Scissors</h3>
+      </div>
+
+    </section>
+
+    <section class="sidebar">
+      <div id="connect">
+        <h2>Connect with Me</h2>
+
+        <a href="#"><img src="assets/images/github-128.png" class="social" alt="GitHub" /></a>
+        <a href="#"><img src="assets/images/linkedin-128.png" class="social" alt="LinkedIn" /></a>
+        <a href="#"><img src="assets/images/stackoverflow-128.png" class="social" alt="Stack Overflow" /></a>
+      </div>
+    </section>
+  </div>
+
+  <footer>
+    <div class="container">
+      Copyright &copy; 
+    </div>
+  </footer>
 </body>
-    
+
 </html>
