--- a/index.html
+++ b/index.html
@@ -6,6 +6,7 @@
   <title>About | David Cejas</title>
   <link rel="stylesheet" type="text/css" href="assets/css/reset.css">
   <link rel="stylesheet" type="text/css" href="assets/css/style.css">
+  <link href="https://fonts.googleapis.com/css?family=Cuprum|Play" rel="stylesheet">
 </head>
 
 <body>
